k8s/apps/smokeping/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: smokeping
  labels:
    name: smokeping
