k8s/apps/smokeping/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smokeping
  namespace: smokeping
  labels:
    app: smokeping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smokeping
  template:
    metadata:
      labels:
        app: smokeping
        app.kubernetes.io/name: smokeping
    spec:
      containers:
        - name: smokeping
          image: linuxserver/smokeping:2.9.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/config"
              name: config
            - mountPath: "/data"
              name: data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: smokeping-config
        - name: data
          persistentVolumeClaim:
            claimName: smokeping-data
