k8s/apps/smokeping/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: smokeping
  namespace: smokeping
  labels:
    app: smokeping
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: smokeping
